Correctly align task input placeholder

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -384,7 +384,7 @@ $blue_due: #4271a6;			// due dates and low importance
 			cursor: text;
 			font-size: 100%;
 			margin: 0;
-			padding: 0 14px;
+			padding: 0 15px;
 			width: 100%;
 			min-height: 44px;
 			overflow: hidden;
